fix(experienceSection): overflow move from html to local section

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,6 @@ $enable-gradients: true;
     margin: 0;
     background: linear-gradient(125deg, #02073d, #1a023d);
     background-size: 200% 200%;
-    overflow-x: hidden;
     opacity: 0.95;
     font-family: "Exo 2", sans-serif !important;
     scroll-behavior: smooth;
